style : fix alignement navbar instructeur

--- a/app/assets/stylesheets/new_header.scss
+++ b/app/assets/stylesheets/new_header.scss
@@ -9,12 +9,6 @@
     width: auto;
   }
 
-  // Avoid overflow when character spacing is modified
-  .fr-container {
-    max-width: 100vw;
-    margin: 0;
-  }
-
   // Align links & buttons
   .fr-translate {
     margin-left: 0;
@@ -42,5 +36,13 @@
   // Remove border on when there is one item only
   .fr-nav__item:only-child::before {
     box-shadow: none;
+  }
+}
+
+// Avoid overflow when character spacing is modified
+#modal-header__menu.fr-modal--opened {
+  .fr-container {
+    max-width: 100vw;
+    margin: 0;
   }
 }
